crates/sith_python_parser/src/parser/tests/snapshots/python_parser__parser__tests__invalid_assignments__tests__ok_attribute_weird.snap
---
source: crates/sith_python_parser/src/parser/tests/invalid_assignments.rs
expression: ast
---
(
    [
        Assign(
            AssignStmt {
                range: 0..12,
                targets: [
                    Attribute(
                        AttributeExpr {
                            range: 0..7,
                            value: StringLiteral(
                                StringLiteralExpr {
                                    range: 0..5,
                                    value: StringLiteralValue {
                                        inner: Single(
                                            StringLiteral {
                                                range: 0..5,
                                                value: "foo",
                                                unicode: false,
                                            },
                                        ),
                                    },
                                },
                            ),
                            attr: Identifier {
                                id: "y",
                                range: 6..7,
                            },
                            ctx: Store,
                        },
                    ),
                ],
                value: NumberLiteral(
                    NumberLiteralExpr {
                        range: 10..12,
                        value: Int(
                            42,
                        ),
                    },
                ),
            },
        ),
    ],
    [],
)
